<resources>
    <string name="app_name">Food Order</string>
    <string name="logo_food_order">Food Order</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="don_t_have_a_account">Don\'t have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="save_account">Save account</string>
    <string name="email_key">EMAIL_KEY</string>
    <string name="password_key">PASSWORD_KEY</string>
    <string name="account_file">Account_Save</string>
    <string name="isSave">is_save</string>
    <string name="account_string">account_string</string>
    <string name="account_names">Account_Names</string>
</resources>
