<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorAccent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatCheckBox
        android:gravity="center"
        android:paddingLeft="10dp"
        android:button="@drawable/checkbox_filter_tint"
        android:id="@+id/chb_login_save_account"
        app:layout_constraintLeft_toRightOf="@id/img_login_password_ui"
        app:layout_constraintTop_toBottomOf="@id/img_login_password_ui"
        android:textColor="@android:color/white"
        android:text="@string/save_account"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/img_login_email_ui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="@id/edt_login_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edt_login_email"
        app:srcCompat="@drawable/ic_account_circle_white_24dp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edt_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="top"
        android:hint="@string/username"
        android:inputType="text"
        android:minEms="8"
        android:paddingBottom="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:backgroundTint="@android:color/white"
        app:layout_constraintLeft_toRightOf="@id/img_login_email_ui"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/img_login_password_ui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="@id/edt_login_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edt_login_pass"
        app:srcCompat="@drawable/ic_vpn_key_white_24dp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edt_login_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:gravity="top"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:backgroundTint="@android:color/white"
        app:layout_constraintLeft_toRightOf="@id/img_login_email_ui"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_login_email" />

    <TextView
        android:id="@+id/txt_login_sign_up_ui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/don_t_have_a_account"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_login_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"

        android:background="@drawable/background_button"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chb_login_save_account" />

    <TextView
        android:id="@+id/txt_login_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/txt_login_sign_up_ui" />

    <View
        android:id="@+id/line_login"
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login_sign_in" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_login_google_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_login"
        android:layout_marginRight="8dp" />
</android.support.constraint.ConstraintLayout>