<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kitaluna.foodorder.fragments.RegisterFragment">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edt_register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="top"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingBottom="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:backgroundTint="@android:color/white"
        app:layout_constraintLeft_toRightOf="@id/img_register_email_ui"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/img_register_email_ui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="@id/edt_register_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edt_register_email"
        app:srcCompat="@drawable/ic_email_white_24dp" />

    <ImageView
        android:id="@+id/img_register_password_ui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="@id/edt_register_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edt_register_pass"
        app:srcCompat="@drawable/ic_vpn_key_white_24dp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edt_register_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="top"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:backgroundTint="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/edt_register_email"
        app:layout_constraintLeft_toRightOf="@id/img_register_email_ui"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="121dp" />


    <Button
        android:id="@+id/btn_register_sign_up"
      android:background="@drawable/background_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_pass_confirm" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edt_register_pass_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
      
        android:gravity="top"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:backgroundTint="@android:color/white"
        app:layout_constraintLeft_toRightOf="@id/img_register_email_ui"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_register_pass" />

    <ImageButton
        app:layout_constraintBottom_toBottomOf="@+id/btn_register_sign_up"
        app:layout_constraintTop_toTopOf="@+id/btn_register_sign_up"
        android:id="@+id/img_register_back"
        android:layout_width="50dp"
        android:layout_height="36dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/edt_register_pass_confirm"
        android:background="@drawable/background_button"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_white_24dp"
        android:layout_marginLeft="25dp" />
</android.support.constraint.ConstraintLayout>
